added vinyl model, controller, service, and some html stuff

--- a/client/assets/scss/main.scss
+++ b/client/assets/scss/main.scss
@@ -16,4 +16,20 @@ main {
 }
 
 
+// Vinyl Card
+.albumCover{
+  height: 100px;
+  width: 100px;
 
+}
+
+.mycard{
+  background-color: #A2E8DD;
+  border-radius: 10px;
+  height: 10vh;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.mybackground{
+  background-color: #627c85;
+}
