A little more Html and SCSS

--- a/client/assets/scss/main.scss
+++ b/client/assets/scss/main.scss
@@ -17,19 +17,19 @@ main {
 
 
 // Vinyl Card
-.albumCover{
-  height: 10vh;
+.incard{
+  max-height: 10vh;
   // width: 100px;
 
 }
 
 .mycard{
-  background-color: #A2E8DD;
+  background-color: #a2e8de8f;
   border-radius: 10px;
   height: 10vh;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .mybackground{
-  background-color: #627c85;
+  background-color: #32373B;
 }
