--- a/client/assets/scss/main.scss
+++ b/client/assets/scss/main.scss
@@ -23,8 +23,12 @@ main {
 
 }
 
+.headerfont{
+  font-family: 'Roboto', sans-serif;
+}
+
 .mycard{
-  background-color: #a2e8de8f;
+  background-color: #c0dad6;
   border-radius: 10px;
   height: 10vh;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -32,5 +36,8 @@ main {
 
 .mybackground{
   background-color: #32373B;
-  
+}
+
+*{
+  font-family: 'Didact Gothic', sans-serif;
 }
