--- a/client/assets/style/main.css
+++ b/client/assets/style/main.css
@@ -13738,6 +13738,10 @@ body {
   background-color: #e8e8e8;
 }
 
+.headercolor {
+  background-color: #32373B;
+}
+
 main {
   flex-grow: 1;
 }
@@ -13751,14 +13755,14 @@ main {
 }
 
 .mycard {
-  background-color: #c0dad6;
+  background-color: rgba(233, 255, 234, 0.6745098039);
   border-radius: 10px;
   height: 10vh;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .mybackground {
-  background-color: #32373B;
+  background-color: #4a5859;
 }
 
 * {
