--- a/client/assets/style/main.css
+++ b/client/assets/style/main.css
@@ -13746,8 +13746,9 @@ main {
   flex-grow: 1;
 }
 
-.incard {
-  max-height: 10vh;
+.albumCover {
+  max-height: 12vh;
+  border-radius: 10px 0px 0px 10px;
 }
 
 .headerfont {
@@ -13757,7 +13758,7 @@ main {
 .mycard {
   background-color: rgba(233, 255, 234, 0.6745098039);
   border-radius: 10px;
-  height: 10vh;
+  height: 12vh;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
