--- a/client/assets/style/main.css
+++ b/client/assets/style/main.css
@@ -13755,6 +13755,10 @@ main {
   font-family: "Roboto", sans-serif;
 }
 
+.loginbutton {
+  background-color: rgba(233, 255, 234, 0.6745098039);
+}
+
 .mycard {
   background-color: rgba(233, 255, 234, 0.6745098039);
   border-radius: 10px;
@@ -13772,7 +13776,7 @@ main {
 
 @media screen and (max-width: 425px) {
   .smallalbumCover {
-    max-height: 12vh;
+    min-height: 12vh;
     border-radius: 10px 0px 0px 10px;
   }
   .smallmycard {
