small style stuff

--- a/client/assets/scss/main.scss
+++ b/client/assets/scss/main.scss
@@ -30,6 +30,8 @@ main {
 
 }
 
+
+
 .headerfont{
   font-family: 'Roboto', sans-serif;
 }
@@ -57,7 +59,7 @@ main {
 @media screen and (max-width:425px){
 
   .smallalbumCover{
-    min-height: 12vh;
+    max-height: 12vh;
     border-radius: 10px 0px 0px 10px;
   }
 
