starting modal template

--- a/client/assets/scss/main.scss
+++ b/client/assets/scss/main.scss
@@ -55,6 +55,10 @@ main {
   font-family: 'Didact Gothic', sans-serif;
 }
 
+.bigCover{
+  height: 50vh;
+}
+
 
 @media screen and (max-width:425px){
 
