--- a/client/assets/scss/main.scss
+++ b/client/assets/scss/main.scss
@@ -57,6 +57,12 @@ main {
 
 .bigCover{
   height: 50vh;
+  width: 50vw;
+  border-radius: 10px;
+}
+
+.modalcolor{
+  background-color: #e9ffea;
 }
 
 
