--- a/client/assets/scss/main.scss
+++ b/client/assets/scss/main.scss
@@ -24,7 +24,7 @@ main {
 // Vinyl Card
 .albumCover{
   max-height: 20vh;
-  width: 100%;
+  // width: 100%;
   border-radius: 10px 0px 0px 10px;
  
   // width: 100px;
@@ -74,7 +74,7 @@ main {
 
   .smallalbumCover{
     max-height: 12vh;
-    width: 100%;
+    // width: 100%;
     border-radius: 10px 0px 0px 10px;
   }
 
