--- a/client/assets/scss/main.scss
+++ b/client/assets/scss/main.scss
@@ -59,9 +59,14 @@ main {
   font-family: 'Didact Gothic', sans-serif;
 }
 
+.descriptionborder{
+  border: 1px solid  #32373B;
+  border-radius: 10px;
+}
+
 .bigCover{
-  height: 50vh;
-  width: 50vw;
+  min-height: 50vh;
+  // width: 50vw;
   border-radius: 10px;
 }
 
