--- a/client/assets/style/main.css
+++ b/client/assets/style/main.css
@@ -13778,9 +13778,13 @@ main {
   font-family: "Didact Gothic", sans-serif;
 }
 
+.descriptionborder {
+  border: 1px solid #32373B;
+  border-radius: 10px;
+}
+
 .bigCover {
-  height: 50vh;
-  width: 50vw;
+  min-height: 50vh;
   border-radius: 10px;
 }
 
